feat: Add ArgoCD Ingress resource with TLS configuration.

--- a/bootstrap/argocd/ingress.yaml
+++ b/bootstrap/argocd/ingress.yaml
@@ -19,6 +19,7 @@ metadata:
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
     cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
+  ingressClassName: nginx
   tls:
     - hosts:
         - argocd.cicd.cachefly.site
