feat: introduce Helm chart values and network policies for the guestbook application and update gitignore to ignore text files.

--- a/helm/guestbook/values.yaml
+++ b/helm/guestbook/values.yaml
@@ -15,6 +15,12 @@ global:
   imagePullSecrets: []
 
 # -----------------------------------------------------------------------------
+# Network Policies (Security)
+# -----------------------------------------------------------------------------
+networkPolicy:
+  enabled: true
+
+# -----------------------------------------------------------------------------
 # Backend (Go API Server)
 # -----------------------------------------------------------------------------
 backend:
