--- a/helm/guestbook/values.yaml
+++ b/helm/guestbook/values.yaml
@@ -123,7 +123,7 @@ postgresql:
     enabled: true
     username: guestbook
     database: guestbook
-    password: "password" # Default password for demo
+    # password: "password" # Removed for security, using existingSecret
     existingSecret: maria-postgres-secret
     existingSecretPasswordKey: password
 
