--- a/helm/guestbook/templates/app/frontend-deployment.yaml
+++ b/helm/guestbook/templates/app/frontend-deployment.yaml
@@ -1,11 +1,17 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: argoproj.io/v1alpha1
+kind: Rollout
 metadata:
   name: maria-frontend
   labels:
     {{- include "guestbook.frontend.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.frontend.replicaCount }}
+  strategy:
+    canary:
+      steps:
+      - setWeight: 20
+      - pause: {}
+      - setWeight: 100
   selector:
     matchLabels:
       {{- include "guestbook.frontend.selectorLabels" . | nindent 6 }}
