feat: Add ArgoCD AppProject definitions for maria-guestbook and default.

--- a/bootstrap/argocd/projects.yaml
+++ b/bootstrap/argocd/projects.yaml
@@ -49,6 +49,8 @@ spec:
       kind: '*'
     - group: policy
       kind: '*'
+    - group: argoproj.io
+      kind: '*'
 
   # Roles for this project
   roles:
