feat: add Prometheus monitoring (ServiceMonitor + Grafana dashboard)

--- a/helm/guestbook/values.yaml
+++ b/helm/guestbook/values.yaml
@@ -21,6 +21,19 @@ networkPolicy:
   enabled: true
 
 # -----------------------------------------------------------------------------
+# Monitoring (Prometheus)
+# -----------------------------------------------------------------------------
+monitoring:
+  enabled: true
+  # ServiceMonitor settings
+  interval: 30s
+  scrapeTimeout: 10s
+  # Grafana Dashboard
+  dashboard:
+    enabled: true
+    namespace: monitoring  # Where Grafana is deployed
+
+# -----------------------------------------------------------------------------
 # Backend (Go API Server)
 # -----------------------------------------------------------------------------
 backend:
