feat: add SealedSecrets for GitOps-managed secrets
- Add sealed-secrets.yaml template
- Add encrypted secrets to values.yaml
- Add bitnami.com to ArgoCD project whitelist
- Update .gitignore for sealed secrets
- Mark setup-secrets.sh as deprecated

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,13 @@ charts/
 Thumbs.db
 
 # Secrets (NEVER commit real secrets!)
+# Plain secrets are blocked
+*-secret.yaml
 *-secrets.yaml
 !*-secrets.yaml.example
+# SealedSecrets are encrypted and SAFE to commit
+!sealed-secrets.yaml
+!**/templates/secrets/*.yaml
 *.key
 *.pem
 
