--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ Thumbs.db
 # SealedSecrets are encrypted and SAFE to commit
 !sealed-secrets.yaml
 !**/templates/secrets/*.yaml
+!**/templates/notifications/*.yaml
 *.key
 *.pem
 
