--- a/argocd/guestbook.yaml
+++ b/argocd/guestbook.yaml
@@ -19,6 +19,8 @@ metadata:
     notifications.argoproj.io/subscribe.on-sync-succeeded.discord: ""
     notifications.argoproj.io/subscribe.on-sync-failed.discord: ""
     notifications.argoproj.io/subscribe.on-health-degraded.discord: ""
+    notifications.argoproj.io/subscribe.on-sync-running.discord: ""
+    notifications.argoproj.io/subscribe.on-deployed.discord: ""
 spec:
   project: maria-guestbook
 
