--- a/argocd/guestbook.yaml
+++ b/argocd/guestbook.yaml
@@ -21,6 +21,24 @@ metadata:
     notifications.argoproj.io/subscribe.on-health-degraded.discord: ""
     notifications.argoproj.io/subscribe.on-sync-running.discord: ""
     notifications.argoproj.io/subscribe.on-deployed.discord: ""
+
+    # ==========================================================================
+    # ArgoCD Image Updater Configuration
+    # ==========================================================================
+    # Images to track (alias=image:tag-strategy)
+    argocd-image-updater.argoproj.io/image-list: |
+      backend=ghcr.io/mvulcu/maria-guestbook-backend:~main
+      frontend=ghcr.io/mvulcu/maria-guestbook-frontend:~main
+
+    # Update strategy: Use Git write-back (commit to repo)
+    argocd-image-updater.argoproj.io/write-back-method: git
+    argocd-image-updater.argoproj.io/git-branch: main
+
+    # Map image aliases to Helm values paths
+    argocd-image-updater.argoproj.io/backend.helm.image-name: backend.image.repository
+    argocd-image-updater.argoproj.io/backend.helm.image-tag: backend.image.tag
+    argocd-image-updater.argoproj.io/frontend.helm.image-name: frontend.image.repository
+    argocd-image-updater.argoproj.io/frontend.helm.image-tag: frontend.image.tag
 spec:
   project: maria-guestbook
 
