--- a/argocd/projects.yaml
+++ b/argocd/projects.yaml
@@ -45,6 +45,8 @@ spec:
       kind: '*'
     - group: apps
       kind: '*'
+    - group: batch
+      kind: '*'
     - group: networking.k8s.io
       kind: '*'
     - group: autoscaling
