--- a/helm/guestbook/templates/networkpolicy.yaml
+++ b/helm/guestbook/templates/networkpolicy.yaml
@@ -78,7 +78,7 @@ spec:
         - port: 6379
           protocol: TCP
 ---
-# 5. Allow Backend -> PostgreSQL
+# 5. Allow Backend & Backup -> PostgreSQL
 # -----------------------------------------------------------------------------
 {{- if .Values.postgresql.enabled }}
 apiVersion: networking.k8s.io/v1
@@ -98,6 +98,9 @@ spec:
         - podSelector:
             matchLabels:
               {{- include "guestbook.backend.selectorLabels" . | nindent 14 }}
+        - podSelector:
+            matchLabels:
+              app.kubernetes.io/name: postgres-backup
       ports:
         - port: 5432
           protocol: TCP
