fix: add connection wait loop to backup cronjob

--- a/helm/guestbook/templates/postgres/backup-cronjob.yaml
+++ b/helm/guestbook/templates/postgres/backup-cronjob.yaml
@@ -57,6 +57,17 @@ spec:
                   echo "Starting backup at $(date)"
                   echo "Target: ${PGHOST}:${PGPORT}/${PGDATABASE}"
 
+                  # Wait for network to be ready (race condition fix)
+                  echo "Waiting for database connection..."
+                  for i in $(seq 1 10); do
+                    if pg_isready -h ${PGHOST} -p ${PGPORT} > /dev/null 2>&1; then
+                      echo "Database is ready!"
+                      break
+                    fi
+                    echo "Attempt $i: waiting..."
+                    sleep 2
+                  done
+
                   # Create backup
                   pg_dump -Fc | gzip > "${BACKUP_FILE}"
 
