fix: add Rollout to ignoreDifferences for manual scaling

--- a/argocd/guestbook.yaml
+++ b/argocd/guestbook.yaml
@@ -78,13 +78,18 @@ spec:
         factor: 2
         maxDuration: 3m
 
-  # Health checks
+  # Ignore runtime differences (HPA, manual scaling, etc.)
   ignoreDifferences:
-    # Ignore auto-generated fields
+    # Ignore replicas for Deployments (HPA managed)
     - group: apps
       kind: Deployment
       jsonPointers:
-        - /spec/replicas  # If using HPA
+        - /spec/replicas
+    # Ignore replicas for Rollouts (Argo Rollouts)
+    - group: argoproj.io
+      kind: Rollout
+      jsonPointers:
+        - /spec/replicas
     - group: autoscaling
       kind: HorizontalPodAutoscaler
       jsonPointers:
